--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>Backend 1 </h1>
-    <h2>this front end</h2>
+   <h3>This is Front end</h3>
 </body>
 </html>
