--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>this front end</title>
 </head>
 <body>
+   <h3>This is Front end</h3>
    <h3>This is Front end</h3>
 </body>
 </html>
